--- a/assets/button.scss
+++ b/assets/button.scss
@@ -8,12 +8,11 @@
 //  }
 //}
 .v-btn--primary{
-  height: 50px !important;
+  //height: 50px !important;
   background-color: var(--v-primary-base) !important;
   border-radius: 3rem !important;
 }
 .v-button--secondary{
-  height: 50px !important;
   background-color: var(--v-bg) !important;
   border-radius: 3rem !important;
   border: 0.2rem solid var(--v-primary-base) !important;
