--- a/assets/style.scss
+++ b/assets/style.scss
@@ -131,3 +131,63 @@ strong {
 .rounded-1\.5{
   border-radius: 1.5em!important;
 }
+
+
+.h-full{
+  height: 100%;
+}
+.w-full{
+  width: 100%;
+}
+.v-input__append-inner{
+  margin-top: 0.8rem !important;
+}
+.curveTitleContainer {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  justify-content: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 37px;
+  line-height: 45px;
+  height: 160px;
+
+  &__text {
+    z-index: 1;
+  }
+
+  &__curveFirstImg {
+    position: absolute;
+    margin: auto;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+    animation: spin 4s linear infinite;
+  }
+
+  &__curveSecondImg {
+    position: absolute;
+    margin: auto;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+    animation: spin 4s linear infinite;
+  }
+}
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
