refactor(project): set font to estedad

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,7 +1,7 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-$body-font-family: 'Vazir', serif;
+$body-font-family: 'Estedad', serif;
 $btn-letter-spacing: 0;
 $tabs-item-letter-spacing: 0;
 $material-dark-elevation-colors: (
