fix(landing): nebula font issue solved

--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: Nebula;
+  src: url('./Nebula-Regular.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
   font-family: Estedad;
   src: url('./Estedad-Regular.ttf');
   font-weight: 300;
