--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -15,6 +15,7 @@ $material-dark-elevation-colors: (
   '12': #0e1224,
   '16': #141432,
   '24': #1a1940,
+  '32': #182636,
 );
 $material-dark: (
   'background':#13202E,
