--- a/assets/style.scss
+++ b/assets/style.scss
@@ -160,3 +160,10 @@ strong {
     transform: rotate(360deg);
   }
 }
+
+.notice-box{
+  margin: auto;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 0.25rem dashed;
+}
