update states style

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -171,3 +171,7 @@ strong {
 .theme--dark.v-list{
 background-color:#182636!important;
 }
+
+.bg-transparent.pa-4.bg-fix.text-center.v-card.v-sheet.theme--dark.elevation-0 {
+  background-color: transparent!important;
+}
