--- a/assets/style.scss
+++ b/assets/style.scss
@@ -175,3 +175,8 @@ background-color:#182636!important;
 .bg-transparent.pa-4.bg-fix.text-center.v-card.v-sheet.theme--dark.elevation-0 {
   background-color: transparent!important;
 }
+
+
+.table td{
+  padding: 1rem;
+}
