--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,6 +8,10 @@ svg {
   width: 100%;
 }
 
+.success{
+  background-color: green !important;
+}
+
 .p-absolute {
   position: absolute !important;
 }
