--- a/assets/style.scss
+++ b/assets/style.scss
@@ -103,8 +103,8 @@ iframe {
 
 p {
   font-weight: 300;
-  font-family: LTZaridSans;
-  font-size: 1.25rem;
+  font-family: Estedad,sans-serif;
+  font-size: 1rem;
 }
 
 a {
