--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,6 +8,10 @@ svg {
   width: 100%;
 }
 
+.success{
+  background-color: green !important;
+}
+
 .p-absolute {
   position: absolute !important;
 }
@@ -99,8 +103,8 @@ iframe {
 
 p {
   font-weight: 300;
-  font-family: LTZaridSans;
-  font-size: 1.25rem;
+  font-family: Estedad,sans-serif;
+  font-size: 1rem;
 }
 
 a {
