feature_upload_files

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -120,7 +120,8 @@ strong {
 }
 
 .theme--dark.v-tabs > .v-tabs-bar {
-  background-color: rgb(8, 10, 24) !important;
+  //background-color: rgb(8, 10, 24) !important;
+  background-color: #13202E;
 }
 
 .bg-color-12 {
@@ -178,7 +179,7 @@ strong {
 }
 
 .theme--dark.v-list {
-  background-color: #182636 !important;
+  background-color: #13202E !important;
 }
 
 .bg-transparent.pa-4.bg-fix.text-center.v-card.v-sheet.theme--dark.elevation-0 {
